# iris

./: .gitignore  .gitmodules  .ycm_extra_conf.py  Assembler.h  AssemblerBase.cc  AssemblerBase.h  AssemblerKeywords.h  AssemblerStateWrapper.cc  AssemblerStateWrapper.h  AssemblerStructures.cc  AssemblerStructures.h  CMakeLists.txt  Core.cc  Core.h  IODevices.cc  IODevices.h  InstructionDescriptions.asciidoc  InstructionFormat.clp  InstructionFormats.def  InstructionProperties.def  LICENSE  Linker.cc  Makefile  Makefile.clips  Makefile.metrom0  Opcodes.def  Problem.h  README.md  RegisteredExternalAddressAssemblers.cc  Repl.cc  Simulator.cc  Types.h  arduino_core.cc  arduino_core.cpp  arduino_main.cpp  array.h  asm.fs  asmiris  asmiris.fs  asmops.fs  (+67 more)
arduino/ArduinoImpl/: ALU.ino  ArduinoImpl.ino
arduino/FramMemoryTest/: FramMemoryTest.ino
arduino/MemoryArray/: MemoryArray.ino
arduino/MemoryArray2/: MemoryArray2.ino
arduino/MemoryArray_MetroM4ExpressVersion/: MemoryArray_MetroM4ExpressVersion.ino
arduino/MemoryArray_MetroM4ExpressVersion_Serial/: MemoryArray_MetroM4ExpressVersion_Serial.ino
backends/arduino/: arduino_core.cc  arduino_core.h
backends/memcore/: IODevices.h  MemoryBlock.h  exceptions.h  mem_core.cc  mem_core.h
clips/: assembly_generator.clp  build_instruction_functions.clp  clipsgen.clp  common.clp  knowledge_desc.clp
cmd/: generate_clp_code.cc
crashes/clang8/: crashdump  (+2 more)
def/: instructions.def
desc/: ArithmeticOp.desc  CompareOp.desc  InstructionGroup.desc
forth/: asmops.fs  core.fs  opcodes.fs
include/: iris.h
misc/: irisxxd
(+39 files in other folders)
